# Parallax-OSINT-Platform

./: .env.example  CHANGELOG.md  CHECKLIST.md  CONTRIBUTING.md  FROZEN_FEATURES.md  IMPLEMENTATION_SUMMARY.md  INCOMPLETE_FEATURES_AUDIT.md  PRIORITY_ACTION_PLAN.md  README.md  package-lock.json  package.json  tailwind.config.js  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_vulnerability.md
.github/workflows/: build.yml  release.yml  test.yml
docs/customer/: USER_GUIDE.md
docs/developer/: BUILDING.md
docs/legal/: ACCEPTABLE_USE_POLICY.md  TERMS_OF_SERVICE.md
docs/owner/: SELLING_GUIDE.md
license-server/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  nginx.conf  package.json
license-server/database/: schema.sql
license-server/database/migrations/: 001_initial_schema.sql
license-server/scripts/: createAdmin.js  generateKeys.js
license-server/src/: server.js
license-server/src/config/: database.js  environment.js
license-server/src/middleware/: auth.js  errorHandler.js  rateLimit.js  validation.js
license-server/src/routes/: activations.js  admin.js  (+2 more)
scripts/: build-all-platforms.sh  dev-setup.sh  generate-license.py
src/: App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: audit.rs  commands.rs  lib.rs  licensing.rs  main.rs  security.rs  vault.rs
src/components/: ErrorBoundary.tsx  LegalWarningModal.tsx  LoadingScreen.tsx  UpgradeModal.tsx  index.ts
src/data/: dorkTemplates.ts
src/hooks/: index.ts  useLicense.ts
src/pages/: AIGenerator.tsx  Dashboard.test.tsx  Dashboard.tsx  DorkBuilder.test.tsx  DorkBuilder.tsx  FirstRun.tsx  ImageIntel.tsx  Library.test.tsx  Library.tsx  NexusGraph.tsx  Settings.tsx  Terminal.tsx  VoiceCommands.tsx
src/services/: gemini.ts  tauri.ts
src/styles/: globals.css
src/tests/: setup.ts  test-utils.tsx
src/utils/: errorHandler.ts  validation.ts
(+9 files in other folders)
