[package]
name = "parallax-intelligence-platform"
version = "1.0.0"
description = "Multi-dimensional threat intelligence platform"
authors = ["Parallax Team"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "parallax_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core and plugins
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.43", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Cryptography
ed25519-dalek = { version = "2.1", features = ["serde"] }
sha2 = "0.10"
aes-gcm = "0.10"
rand = "0.8"
uuid = { version = "1.11", features = ["v4", "serde"] }

# Secure credential storage
keyring = "3.6"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging and monitoring
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
sentry = { version = "0.34", features = ["tracing", "anyhow"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# System info for machine fingerprinting
sysinfo = "0.33"
machine-uid = "0.5"

# Database (SQLite for local vault)
rusqlite = { version = "0.32", features = ["bundled"] }

# JWT for license validation
jsonwebtoken = "9.3"

# Rate limiting
governor = "0.8"

# Configuration
config = "0.14"
dirs = "6.0"

# Additional utilities
base64 = "0.21"
hex = "0.4"
futures = "0.3"

# Export functionality
csv = "1.3"
printpdf = "0.7"

